# dnn

./: .const.json.swp  .gitignore  .gitmodules  .install.sh.swp  .user_const.json.swp  CMakeLists.txt  LICENSE  README.md  a.out  const.json  dnn.sublime-project  dnn.sublime-workspace  ground  install.sh  mpl.json  shapelets.const  test.pb  user_const.json
dnn/: CMakeLists.txt  bindings.cpp  bindings.h
dnn/activation/: CMakeLists.txt  activation.h  determ.h  exp.h  log_exp.h  sigmoid.cpp  sigmoid.h
dnn/base/: CMakeLists.txt  base.h  entry.cpp  entry.h  errors.h  model_options.h
dnn/connection/: CMakeLists.txt  builder.cpp  builder.h  connection.h  difference_of_gaussians.cpp  difference_of_gaussians.h  random_neuron.h  stochastic.h
dnn/contrib/: CMakeLists.txt
dnn/contrib/kiss_fft/: CMakeLists.txt  kiss_fft.c  kiss_fftndr.c
dnn/cost/: cost_function.h  regression.h
dnn/dispatcher/: dispatcher.cpp  dispatcher.h
dnn/intrinsic_plasticity/: CMakeLists.txt  intrinsic_plasticity.cpp  intrinsic_plasticity.h  max_entropy.h
dnn/learning_rule/: CMakeLists.txt  chronotron_rule.h  learning_rule.cpp  learning_rule.h  optimal_stdp.cpp  optimal_stdp.h  pre_post_stdp.h  resume_hidden_rule.h  resume_rule.h  sequence_learning.cpp  sequence_learning.h  stdp.cpp  stdp.h  supervised_spike.h
dnn/metrics/: CMakeLists.txt  lyapunov.cpp  lyapunov.h
dnn/neuron/: CMakeLists.txt  config.h  default_config.h  defaults.h  hindmarsh_rose.h  integrate_and_fire.h  spike_neuron.h  spike_neuron_impl.cpp  spike_neuron_impl.h  spike_sequence_neuron.h  srm_neuron.cpp  srm_neuron.h
dnn/protos/: CMakeLists.txt  base.proto  chronotron_rule.proto  config.proto  connection.proto  difference_of_gaussians.proto  dot.proto  epsp.proto  exp.proto  gauss.proto  hedonistic_synapse.proto  hindmarsh_rose.proto  ident.proto  input_classifier.proto  linear.proto  log_exp.proto  log_norm.proto  matrix.proto  max_entropy.proto  min_max_norm.proto  multiplicative_norm.proto  nnmf_homeostasis.proto  nonlinear_norm.proto  optimal_stdp.proto  options.proto  pre_post_stdp.proto  random_neuron.proto  rate_norm.proto  regression.proto  resume_hidden_rule.proto  resume_rule.proto  sequence_learning.proto  sequence_likelihood.proto  sigmoid.proto  sim.proto  sliding_ltd.proto  soft_bounds.proto  spike_neuron.proto  spike_neuron_impl.proto  srm_neuron.proto  (+8 more)
dnn/receptive_field/: gauss.h  ident.h  linear.h  receptive_field.h
dnn/reinforcement/: CMakeLists.txt  input_classifier.h  reinforcement.h  sequence_likelihood.cpp  sequence_likelihood.h
dnn/sim/: global_ctx.h  layer.h  network.h  reward_control.h  sim.h  sim_impl.h
dnn/spikework/: CMakeLists.txt  convolve.cpp  convolve.h  fft.cpp  fft.h  spikework.cpp  spikework.h
dnn/spikework/kernel/: CMakeLists.txt  anova_dot.cpp  anova_dot.h  dot.cpp  dot.h  epsp.cpp  epsp.h  gauss.h  kernel.h  rbf_dot.cpp  rbf_dot.h  shoe.cpp  shoe.h
dnn/spikework/protos/: CMakeLists.txt  epsp.proto  kernel_options.proto  spikework_config.proto
dnn/synapse/: basic_synapse.h  hedonistic_synapse.cpp  hedonistic_synapse.h  stp_synapse.h  synapse.h
dnn/util/: CMakeLists.txt  act_vector.h  json.cpp  matrix.cpp  matrix.h  maybe.h  parse_parenthesis.h  proto_options.h  spinning_barrier.h  stat_gatherer.cpp  thread.cpp
dnn/util/log/: log.h
dnn/util/serial/: meta_proto_serial.h  proto_serial-inl.h  proto_serial.cpp  proto_serial.h
dnn/util/server/: http.cpp  http.h  response_builder.cpp  server.h
dnn/util/ts/: CMakeLists.txt  generic.h  spikes_list.cpp  spikes_list.h  time_series.h  time_series_complex.h
dnn/weight_normalization/: CMakeLists.txt  log_norm.h  min_max_norm.cpp  min_max_norm.h  multiplicative_norm.h  nnmf_homeostasis.h  nonlinear_norm.h  rate_norm.h  sliding_ltd.h  soft_bounds.h  sum_norm.h  unit_norm.h  weight_normalization.cpp  weight_normalization.h
dnn_project/dnn/protos/: CMakeLists.txt  adapt_integrate_and_fire.proto  base.proto  determ.proto  difference_of_gaussians.proto  exp_threshold.proto  hedonistic_synapse.proto  ids_connection.proto  input.proto  input_classifier.proto  input_time_series.proto  leaky_integrate_and_fire.proto  learning_rule.proto  matrix.proto  min_max.proto  mpl.proto  nonlinear_min_max.proto  oja.proto  optimal_stdp.proto  pow_min_max.proto  reward_control.proto  sigmoid.proto  sim_info.proto  sliding_ltd.proto  spike_neuron.proto  spike_sequence_neuron.proto  spikes_list.proto  srm_neuron.proto  static_synapse.proto  statistics.proto  std_synapse.proto  stdp.proto  stdp_time.proto  stochastic.proto  strict_bound.proto  synapse.proto  time_series.proto  time_series_info.proto  (+4 more)
dnn_project/shapelets/: CMakeLists.txt  common.cpp  common.h  dataset.cpp  dataset.h  dist.cpp  dist.h  orderline.cpp  orderline.h  projection.h  shapelet_register.x  shapelets_algo.cpp  shapelets_algo.h  shapelets_config.h  stats.cpp  subsequence.cpp  subsequence.h
dnn_project/spikework/: CMakeLists.txt  conv.cpp  conv.h  fft.cpp  fft.h  gram.cpp  gram.h  io_worker.cpp  io_worker.h  kernel.cpp  kernel.h  kernel_factory.cpp  kernel_factory.h  kernel_old.cpp  kernel_old.h  processor.h  read.cpp  read.h  spikework.cpp  spikework.h  worker.h
models/: CMakeLists.txt
models/acoustic_model/: CMakeLists.txt  acoustic_model.cpp  config.pb.txt
models/bio_learn/: CMakeLists.txt  bio_learn.cpp  config.pb.txt
models/example/: CMakeLists.txt  CMakeLists00.txt  config.pb.txt  config_template.pb.txt  example.cpp
models/feedback_stdp/: CMakeLists.txt  config.pb.txt  feedback_stdp.cpp
models/hindmarsh_rose_model/: CMakeLists.txt  config.pb.txt  hindmarsh_rose_model.cpp
models/hs_model/: CMakeLists.txt  config.pb.txt  hs_model.cpp
models/seq_model/: CMakeLists.txt  config.pb.txt  seq_model.cpp
models/stdp_analytic/: CMakeLists.txt  config.pb.txt  stdp_analytic.cpp
models/stdp_model/: CMakeLists.txt  config.pb.txt  eval.R  stdp_model.cpp  test_licks.pb
models/stdp_pca_model/: CMakeLists.txt  config.pb.txt  stdp_pca_model.cpp
models/supervised_task/: CMakeLists.txt  config.pb.txt  supervised_task.cpp
tools/dumptool/: CMakeLists.txt  dumptool.cpp
(+388 files in other folders)
