file(GLOB ProtoFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")

PROTOBUF_GENERATE_CPP_DNN(PROTO_SRCS PROTO_HDRS PROTOFILES ${ProtoFiles} PROTOROOT ${PROJECT_SOURCE_DIR} OUTPATH ${CMAKE_BINARY_DIR})

add_library(dnnpb SHARED ${ProtoFiles} ${PROTO_SRCS})

SET_TARGET_PROPERTIES(dnnpb PROPERTIES COMPILE_FLAGS "-fPIC")

target_link_libraries(dnnpb
    ${PROTOBUF_LIBRARY}
)

install(TARGETS dnnpb  DESTINATION lib/ COMPONENT)

install(
    DIRECTORY
    ${CMAKE_BINARY_DIR}/dnn/protos
    DESTINATION
    include/dnn
    FILES_MATCHING
    PATTERN "*.h"
    PATTERN "*.hpp"
)
